# django_price_tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample_env
core/: celery.py  settings.py  urls.py
prices/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
prices/external_apis/: get_products.py  nbu_currency.py
prices/migrations/: 0001_add_currency_rate_model.py  0002_add_product_models.py  0002_add_products_model.py  0002_add_shop_model.py  0003_add_product_model.py  0004_add_product_price_alert_model.py
tasks_app/: models.py  serializers.py  tasks.py  urls.py  views.py
tasks_app/external_apis/: get_products.py  nbu_currency.py
tasks_app/migrations/: 0001_add_currency_rate_model.py  0002_add_product_model.py
